test/fixtures/valid/resources/foo.raml
displayName: foo
description: |
  My description [here](#foo.{foo_id}.post)
  1. my item in the list
    section 1
  2. my item in the list
    # start-privatesection 2# end-private
# start-private
  3. my item in the list
# end-private
  # start-private
  private section goes
  here# end-private
/{foo_id}:
  post:
    displayName: foo
    responses:
      201:
        body:
          application/json:
            schema: !include ../schemas/foo/item.json

  /bar:
    get:
      displayName: foo
      responses:
        201:
          body:
            application/json:
              schema: !include ../schemas/foo/item.json
              example: !include ../schemas/foo/item.example.json
# start-private
  /baz:
    get:
      displayName: foo
      responses:
        201:
          body:
            application/json:
              schema: !include ../schemas/foo/item.json
              example: !include ../schemas/foo/item.example.json
# end-private
