test/fixtures/invalid/invalid-anchor.raml
#%RAML 0.8
---
baseUri: foo
title: foo
version: foo
schemas:
  - foo: !include schemas/foo/object.json
documentation:
  -
    title: foo
    content: 123

/foo:
  displayName: foo
  description: My description [here](#foo123)
  /{foo_id}:
    post:
      displayName: foo
      responses:
        201:
          body:
            application/json:
              schema: !include schemas/foo/item.json
